# sdmt_lab_3

./: README.md
go/: Dockerfile
python/: Dockerfile  requirements.txt
python/spaceship/routers/: api.py
rust/: Cargo.toml  Dockerfile  docker-compose.yaml  main.rs
rust/src/: main.rs
rust/static/: index.html
